Preferences: navigate to next GtkEntry with single tab/arrow

Earlier, on TAB/arrow the focus was shifted from GtkEntry to next
GtkListBoxRow. This required one more tab/arrow key press to focus
the required GtkEntry. Continued work on an implementation by
Sébastien Lafargue (https://paste.fedoraproject.org/506997/).
Implemented single tab_backward to navigate to previous GtkEntry.
This was achieved with the help of 'focus' signal.
If (GtkEntry is focused and direction=TAB_BACKWARD) then
        shift focus to GtkListBoxRow of that GtkEntry

https://bugzilla.gnome.org/show_bug.cgi?id=764219