libide/preferences/ide-preferences-entry.h
@@ -34,6 +34,7 @@ struct _IdePreferencesEntryClass
   IdePreferencesBinClass parent_class;
 };
 
+GtkWidget *ide_preferences_entry_get_entry_widget (IdePreferencesEntry *self);
 GtkWidget *ide_preferences_entry_get_title_widget (IdePreferencesEntry *self);
 
 G_END_DECLS
